# monorepo

./: .bazelignore  .dockerignore  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  MODULE.bazel  README.md  codebook.toml  discover.sh  rustfmt.toml
arenabuddy/arenabuddy/: CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  tailwind.css  tauri.conf.json
arenabuddy/arenabuddy/assets/: tailwind.css
arenabuddy/arenabuddy/data/: cards-full.pb
arenabuddy/arenabuddy/src/: app.rs  debug_logs.rs  error_logs.rs  errors.rs  ingest.rs  lib.rs  main.rs  match_details.rs  matches.rs  metrics.rs  service.rs  state.rs
arenabuddy/arenabuddy/src/app/: debug_logs.rs  draft_details.rs  drafts.rs  error_logs.rs  match_details.rs  matches.rs  mod.rs  pages.rs  stats.rs
arenabuddy/arenabuddy/src/backend/: auth.rs  grpc_writer.rs  ingest.rs  launch.rs  mod.rs  paths.rs  service.rs  sync.rs  update.rs
arenabuddy/arenabuddy/src/commands/: debug_logs.rs  error_logs.rs  match_details.rs  matches.rs  mod.rs
arenabuddy/arenabuddy/src/components/: cost.rs  deck_list.rs  (+2 more)
arenabuddy/arenabuddy_backend/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
arenabuddy/arenabuddy_backend/proto/: arenabuddy.proto
arenabuddy/arenabuddy_backend/src/: client.rs  main.rs
arenabuddy/arenabuddy_cli/: CHANGELOG.md  Cargo.toml
arenabuddy/arenabuddy_cli/src/: errors.rs  lib.rs  main.rs
arenabuddy/arenabuddy_core/: Cargo.toml  build.rs
arenabuddy/arenabuddy_core/src/: cards.rs  draft.rs  errors.rs  events.rs  ingest.rs  lib.rs  processor.rs  replay.rs
arenabuddy/arenabuddy_data/: Cargo.toml  sqlx.toml
arenabuddy/arenabuddy_data/src/: directory.rs  errors.rs  lib.rs  storage.rs
arenabuddy/arenabuddy_ui/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.css
arenabuddy/arenabuddy_ui/assets/: tailwind.css
arenabuddy/arenabuddy_ui/src/: app.rs  debug_logs.rs  error_logs.rs  ingest.rs  main.rs  match_details.rs  matches.rs  service.rs
arenabuddy/cli/: Cargo.toml
arenabuddy/cli/src/: errors.rs  lib.rs
arenabuddy/core/: CHANGELOG.md  Cargo.toml  build.rs
arenabuddy/core/data/: cards-full.pb
arenabuddy/core/src/: cards.rs  errors.rs  lib.rs  multimap.rs  proto.rs  sheets.rs
arenabuddy/metagame/: Cargo.toml
arenabuddy/metagame/src/: classification.rs  lib.rs  main.rs
arenabuddy/server/: Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml  tempo.yaml
arenabuddy/server/src/: auth.rs  debug_service.rs  lib.rs  main.rs  match_service.rs  otel.rs  sheets_sync.rs
arenabuddy/web/: Cargo.toml  Dioxus.toml  Dockerfile
arenabuddy/web/src/: main.rs
baseball/: .gitignore  Cargo.toml  LICENSE
baseball/assets/: Official_Baseball_Rules_2025.md
baseball/baseball_game_rules/: Cargo.toml
baseball/baseball_game_rules/src/: lib.rs
baseball/rules/: Cargo.toml
baseball/rules/src/: lib.rs
baseball/src/: lib.rs  main.rs
baseball/src/baseball/: baserunners.rs  core.rs  game.rs  inning.rs  lineup.rs  mod.rs  plate_appearance.rs
baseball/src/game/: mod.rs  start.rs
christmas/: Cargo.toml  Dioxus.toml  Dockerfile  README.md  index.html  sqlx.toml
christmas/assets/: participants.yaml  tailwind.css
christmas/migrations/: 001_initial.sql  002_exchange_snapshots.sql  initial.sql  triggers.sql
christmas/src/: app.rs  backend.rs  data.rs  database.rs  error.rs  giftexchange.rs  lib.rs  main.rs  matching.rs  persist.rs  server.rs  ui.rs  utils.rs
christmas/src/app/: christmas.rs  mod.rs  routes.rs  ui.rs
christmas/src/components/: exchange.rs  exclusions.rs  letters.rs  mod.rs  participants.rs
christmas/src/database/: mod.rs  postgres.rs
christmas/src/exchange/: graph.rs  mod.rs  participant.rs
christmas/src/model/: exchange.rs  graph.rs  mod.rs
christmas/src/server/: functions.rs  launch.rs  mod.rs  server.rs
gsazure/: .dockerignore  .gitignore  BUILD.bazel  Cargo.toml  Dioxus.toml  Dockerfile  README.md  tailwind.css
gsazure/assets/: main.css  tailwind.css
gsazure/src/: app.rs  lib.rs  main.rs
gsazure/src/components/: blog.rs  components.rs  mod.rs
gsazure/src/pages/: about.rs  blog.rs  mod.rs  projects.rs
leetcode/: Cargo.toml
leetcode/src/: lib.rs  main.rs
leetcode/src/harness/: cli.rs  fetch.rs  mod.rs  parse.rs  scaffold.rs
leetcode/src/problems/: mod.rs  p0001_two_sum.rs
leetcode/src/support/: mod.rs
lib/multimap/: Cargo.toml
lib/multimap/src/: lib.rs
lib/start/: BUILD.bazel  Cargo.toml
lib/start/src/: lib.rs  metadata.rs  start.rs
lib/tracingx/: BUILD.bazel  Cargo.toml  README.md
lib/tracingx/examples/: advanced.rs  basic.rs
lib/tracingx/src/: lib.rs  otel.rs  tracingx.rs
life/: Cargo.toml
life/src/: lib.rs  main.rs
life/src/game/: components.rs  mod.rs  resources.rs  systems.rs
life/src/menu/: mod.rs  systems.rs
mtg-metagame/: Cargo.toml  sqlx.toml
mtg-metagame/migrations/: 20260311000000_initial.sql
mtg-metagame/src/: lib.rs  main.rs  models.rs
mtg-metagame/src/db/: mod.rs  models.rs  postgres.rs
mtg-metagame/src/scraper/: deck.rs  fetcher.rs  metagame.rs  mod.rs  tournament.rs
sports/: Cargo.toml
sports/baseballref/: Cargo.toml  sqlx.toml
sports/baseballref/migrations/: 003_fix_batting_unique_constraint.sql  004_increase_position_varchar.sql  005_add_pitch_order_to_constraint.sql  006_failed_scrapes.sql  007_increase_start_time_varchar.sql  008_batting_details_stats.sql
sports/baseballref/scripts/: backfill_details_stats.sql  repair_team_assignment.sql
sports/baseballref/src/: cli.rs  lib.rs
sports/migrations/: 001_initial_schema.sql  002_increase_varchar_limits.sql
sports/src/: lib.rs  main.rs
sports/src/db/: pitching.rs  players.rs  teams.rs
sports/src/models/: batting.rs  game.rs  mod.rs  pitching.rs  play_by_play.rs
sports/src/parser/: box_score.rs  game_info.rs  mod.rs  play_by_play.rs
sports/src/scraper/: mod.rs
sports/webui/: Cargo.toml  Dioxus.toml
sports/webui/assets/: main.css
sports/webui/src/: app.rs  bbref.rs  divisions.rs  dto.rs  fmt.rs  lib.rs  main.rs
twotris/: Cargo.toml
twotris/src/: main.rs
twotris/src/tetris/: components.rs  mod.rs  plugin.rs
(+330 files in other folders)
