[workspace]
members = [
    "christmas",
    "gsazure",
    "lib/*",
    "baseball",
    "baseball/rules",
    "twotris",
    "arenabuddy/cli",
    "arenabuddy/core",
    "arenabuddy/data",
    "arenabuddy/arenabuddy",
    "arenabuddy/server",
    "life",
    "sports",
    "sports/baseballref",
]
resolver = "3"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
description = "Repo with all my rust apps as I build them"
categories = []
version = "0.1.0"
repository = "https://github.com/gazure/monorepo"
edition = "2024"
rust-version = "1.93"
keywords = []
license = "MIT or Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
axum = "0.8.8"
base64 = "0.22"
bevy = { version = "0.18.0" }
bevy_framepace = { version = "0.20.1" }
bevy-inspector-egui = "0.36.0"
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
clap = { version = "4.5.57", features = ["derive"] }
console_error_panic_hook = "0.1"
console-subscriber = "0.5.0"
csv = { version = "1.4.0" }
ctrlc = "3.5.1"
derive_builder = "0.20.2"
dioxus = { version = "0.7.3" }
fastrand = "2.3.0"
google-sheets4 = { version = "7.0.0" }
indoc = "2.0.7"
jsonwebtoken = "10.3.0"
itertools = "0.14.0"
notify = "8.2.0"
open = "5.3"
postgresql_embedded = { version = "0.20.0", features = ["bundled"] }
prost = "0.14.3"
prost-build = { version = "0.14.3", features = ["format"] }
prost-types = "0.14.3"
tonic = "0.14.3"
tonic-build = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.3"
rfd = { version = "0.17.2", default-features = false }
rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.149"
serde_yaml = "0.9"
sqlx = { version = "0.9.0-alpha.1", features = [
    "chrono",
    "uuid",
    "postgres",
    "runtime-tokio",
    "sqlx-toml",
    "rust_decimal",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2.4"
reqwest = { version = "0.13.1", features = [
    "form",
    "json",
    "stream",
    "query",
    "default-tls",
] }
rustyline = "17.0.2"
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4", "js"] }
yup-oauth2 = { version = "12.1.2", features = [
    "hyper-rustls",
    "service-account",
    "ring",
] }

# Define common profiles for all workspace members
[profile.dev]
opt-level = 1 # Basic optimizations for better debug performance

# CI profile: inherits from dev but without dependency optimizations for faster builds
# Usage in CI: cargo build --profile ci
[profile.ci]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true

# Enable high optimizations for dependencies in dev builds (local development only)
# This significantly improves performance while keeping your code unoptimized for fast builds
# For CI, use: cargo build --profile ci (which won't have these optimizations)
[profile.dev.package."*"]
opt-level = 3

# Ensure Bevy is fully optimized even in dev
[profile.dev.package.bevy]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# unwrap_used = {level = "deny", priority = -1}
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
