[workspace]
members = [
    "christmas",
    "gsazure",
    "lib/*",
    "baseball",
    "baseball/rules",
    "twotris",
    "life",
    "sports",
    "sports/baseballref",
]
resolver = "3"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
description = "Repo with all my rust apps as I build them"
categories = []
version = "0.1.0"
repository = "https://github.com/gazure/monorepo"
edition = "2024"
rust-version = "1.94"
keywords = []
license = "MIT or Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bevy = { version = "0.18.1" }
bevy-inspector-egui = "0.36.0"
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
clap = { version = "4.6.0", features = ["derive"] }
console_error_panic_hook = "0.1"
dioxus = { version = "0.7.3" }
fastrand = "2.3.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
postgresql_embedded = { version = "0.20.2", features = ["bundled"] }
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "form",
    "json",
    "stream",
    "query",
    "default-tls",
] }
rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = [
    "chrono",
    "uuid",
    "postgres",
    "runtime-tokio",
    "sqlx-toml",
    "rust_decimal",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.1"

# Define common profiles for all workspace members
[profile.dev]
opt-level = 1 # Basic optimizations for better debug performance

# CI profile: inherits from dev but without dependency optimizations for faster builds
# Usage in CI: cargo build --profile ci
[profile.ci]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true

# Enable high optimizations for dependencies in dev builds (local development only)
# This significantly improves performance while keeping your code unoptimized for fast builds
# For CI, use: cargo build --profile ci (which won't have these optimizations)
[profile.dev.package."*"]
opt-level = 3

# Ensure Bevy is fully optimized even in dev
[profile.dev.package.bevy]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# unwrap_used = {level = "deny", priority = -1}
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
