[package]
name = "baseball"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
baseball_game_rules = { path = "./rules" }
bevy = { workspace = true, features = ["file_watcher"] }
# bevy-inspector-egui = { workspace = true }  # Not yet compatible with Bevy 0.17
tracingx = { path = "../lib/tracingx" }
