[package]
name = "christmas"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, features = ["wasmbind"] }
dioxus = { workspace = true, features = ["router", "fullstack"] }
fastrand = { workspace = true }
postgresql_embedded = { workspace = true, features = [
    "bundled",
], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
start = { path = "../lib/start" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracingx = { path = "../lib/tracingx" }
tokio = { workspace = true, features = ["full"], optional = true }
sqlx = { workspace = true, optional = true, features = ["time"]}

[[bin]]
name = "christmas"
path = "src/main.rs"

[lib]
name = "christmas"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:postgresql_embedded",
    "dep:sqlx",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
