[package]
name = "christmas"
description = "christmas drawings for my family"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, optional = true }
chrono = { workspace = true, features = ["wasmbind"] }
dioxus = { workspace = true, features = ["fullstack"] }
fastrand = { workspace = true }
postgresql_embedded = { workspace = true, features = [
    "bundled",
], optional = true }
serde = { workspace = true, features = ["derive"] }
tracingx = { path = "../lib/tracingx" }
tokio = { workspace = true, features = ["full"], optional = true }
sqlx = { workspace = true, optional = true, features = ["chrono"] }

[[bin]]
name = "christmas"
path = "src/main.rs"

[lib]
name = "christmas"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:postgresql_embedded",
    "dep:sqlx",
]
