[package]
name = "gsazure"
description = "personal 'website'"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
start = { path = "../lib/start" }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "gsazure"
path = "src/main.rs"

[lib]
name = "gsazure"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
