[package]
name = "life"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "life"
path = "src/lib.rs"

[[bin]]
name = "life"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
# bevy_framepace = { workspace = true}
rand.workspace = true

# Enable file_watcher for hot reloading on native targets only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["file_watcher"] }

# getrandom needs an explicit backend on browser wasm; also requires
# `--cfg getrandom_backend="wasm_js"` (set in .cargo/config.toml)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
