[package]
name = "twotris"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
tracingx = { path = "../lib/tracingx"}
rand = { workspace = true }
rand_chacha = { workspace = true }
