[package]
name = "twotris"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
tracingx = { path = "../lib/tracingx" }
rand = { workspace = true }
rand_chacha = { workspace = true }

# Enable file_watcher for hot reloading on native targets only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["file_watcher"] }
