[package]
name = "arenabuddy"
description = "UI for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
arenabuddy_core = { path = "../arenabuddy_core/" }
arenabuddy_data = { path = "../arenabuddy_data" }
async-trait = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["desktop"] }
itertools = { workspace = true }
notify = { workspace = true }
open = { workspace = true }
postgresql_embedded = { workspace = true, features = ["bundled"] }
rfd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
start = { path = "../../lib/start" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
tracingx = { path = "../../lib/tracingx" }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
# server = ["dioxus/server", "dep:tokio"]
debug = ["dep:console-subscriber"]
