[package]
name = "arenabuddy"
description = "UI for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
arenabuddy_core = { path = "../arenabuddy_core/" }
arenabuddy_data = { path = "../arenabuddy_data" }
async-trait = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["desktop", "router"] }
itertools = { workspace = true }
notify = { workspace = true }
open = { workspace = true }
postgresql_embedded = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
start = { path = "../../lib/start" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracingx = { path = "../../lib/tracingx" }
tracing-appender = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
axum = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { workspace = true, default_features = false, features = ["xdg-portal", "tokio"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { workspace = true }

[lints]
workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
# server = ["dioxus/server", "dep:tokio"]
debug = ["dep:console-subscriber"]
