[package]
name = "arenabuddy_core"
description = "core modules for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { workspace = true }

[dependencies]
derive_builder = { workspace = true }
include_dir = { workspace = true }
indoc = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
