[package]
name = "arenabuddy_core"
description = "core modules for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { workspace = true , features = ["format"]}

[dependencies]
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
include_dir = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[lints]
workspace = true
