[package]
name = "arenabuddy_data"
description = "Storage of arenabuddy data"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
arenabuddy_core = { path = "../arenabuddy_core/" }
chrono = { workspace = true, features = ["serde"] }
indoc = { workspace = true }
postgresql_embedded = { workspace = true, features = ["bundled"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "uuid"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
