[package]
name = "arenabuddy_ui"
description = "UI for arenabuddy"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
arenabuddy_core = { path = "../arenabuddy_core/" }
dioxus = { workspace = true, features = ["router"] }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[lints]
workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
