[package]
name = "arenabuddy_cli"
authors.workspace = true
categories.workspace = true
description = "parse player.log files"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
arenabuddy_core = { path = "../core" }
arenabuddy_data = { path = "../data" }
arenabuddy_metagame = { path = "../metagame" }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
dirs = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "default-tls"] }
rusqlite = { workspace = true }
rustyline = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }

[[bin]]
name = "arenabuddyctl"
path = "src/main.rs"

[lints]
workspace = true
